Wrapping / spacing issue with surgery name fixed

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1714,7 +1714,8 @@ h3 span[class^="icon-"] + span {
 
 .editable > div, .checklist-export {
 	border: 2px solid @blue-color;
-	min-height: 4em;
+	min-height: 5.5em;
+	padding: 0.25em;
 	padding-bottom: 1.5em;
 	border-radius: 50px;
 	margin-top: @v-space/2;
@@ -1736,11 +1737,14 @@ h3 span[class^="icon-"] + span {
 	position: absolute; 
 	bottom: 2px;
 	left: 1em;
+	padding: 0.25em;
+	line-height: 1.125;
 }
 
 .editable > div p {
 	padding-left: 1em;
 	font-weight: bold;
+	line-height: 1.125;
 }
 
 .tall > div {
